--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.1.0",
     "moment": "~2.29.3",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1"
   }
