--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "~2.29.3",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "nodemon": "^2.0.18",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1"
   }
