--- a/Clase 20/Preentrega Final 2/package.json
+++ b/Clase 20/Preentrega Final 2/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.0",
     "mongoose": "^6.4.2"
   }
 }
