--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "knex": "^2.1.0",
     "moment": "~2.29.3",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.18",
+    "normalizr": "^3.6.2",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1"
   }
