--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^2.0.18",
     "normalizr": "^3.6.2",
     "pug": "^3.0.2",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.5.1"
   }
 }
