--- a/Clase 29/pm2/package.json
+++ b/Clase 29/pm2/package.json
@@ -1,17 +1,239 @@
 {
-  "name": "forever",
+  "name": "pm2",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "dependencies": {
+    "anymatch": "^2.0.0",
+    "arr-diff": "^4.0.0",
+    "arr-flatten": "^1.1.0",
+    "arr-union": "^3.1.0",
+    "array-unique": "^0.3.2",
+    "assign-symbols": "^1.0.0",
+    "async": "^1.5.2",
+    "async-each": "^1.0.3",
+    "atob": "^2.1.2",
+    "available-typed-arrays": "^1.0.5",
+    "balanced-match": "^1.0.2",
+    "base": "^0.11.2",
+    "binary-extensions": "^1.13.1",
+    "brace-expansion": "^1.1.11",
+    "braces": "^2.3.2",
+    "broadway": "^0.3.6",
+    "cache-base": "^1.0.1",
+    "call-bind": "^1.0.2",
+    "caller": "^1.1.0",
+    "chokidar": "^2.1.8",
+    "class-utils": "^0.3.6",
+    "cliff": "^0.1.10",
+    "clone": "^2.1.2",
+    "collection-visit": "^1.0.0",
+    "color": "^3.2.1",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "color-string": "^1.9.1",
+    "colors": "^0.6.2",
+    "colorspace": "^1.1.4",
+    "component-emitter": "^1.3.0",
+    "concat-map": "^0.0.1",
+    "configstore": "^4.0.0",
+    "copy-descriptor": "^0.1.1",
+    "core-util-is": "^1.0.3",
+    "crypto-random-string": "^1.0.0",
+    "cycle": "^1.0.3",
+    "debug": "^2.6.9",
+    "decode-uri-component": "^0.2.0",
+    "deep-equal": "^2.0.5",
+    "define-properties": "^1.1.4",
+    "define-property": "^2.0.2",
+    "director": "^1.2.7",
+    "dot-prop": "^4.2.1",
+    "duplexer": "^0.1.2",
+    "enabled": "^2.0.0",
+    "es-abstract": "^1.20.1",
+    "es-get-iterator": "^1.1.2",
+    "es-to-primitive": "^1.2.1",
+    "event-stream": "^3.3.4",
+    "eventemitter2": "^6.4.4",
+    "expand-brackets": "^2.1.4",
+    "express": "^4.18.1",
+    "extend-shallow": "^2.0.1",
+    "extglob": "^2.0.4",
+    "eyes": "^0.1.8",
+    "fecha": "^4.2.3",
+    "fill-range": "^4.0.0",
+    "flatiron": "^0.4.3",
+    "fn.name": "^1.1.0",
+    "for-each": "^0.3.3",
+    "for-in": "^1.0.2",
+    "forever": "^4.0.3",
+    "forever-monitor": "^3.0.3",
+    "fragment-cache": "^0.2.1",
+    "from": "^0.1.7",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.5",
+    "functions-have-names": "^1.2.3",
+    "get-intrinsic": "^1.1.2",
+    "get-symbol-description": "^1.0.0",
+    "get-value": "^2.0.6",
+    "glob": "^7.2.3",
+    "glob-parent": "^3.1.0",
+    "graceful-fs": "^4.2.10",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-property-descriptors": "^1.0.0",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "has-value": "^1.0.0",
+    "has-values": "^1.0.0",
+    "i": "^0.3.7",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "internal-slot": "^1.0.3",
+    "is-accessor-descriptor": "^1.0.0",
+    "is-arguments": "^1.1.1",
+    "is-arrayish": "^0.3.2",
+    "is-bigint": "^1.0.4",
+    "is-binary-path": "^1.0.1",
+    "is-boolean-object": "^1.1.2",
+    "is-buffer": "^1.1.6",
+    "is-callable": "^1.2.4",
+    "is-data-descriptor": "^1.0.0",
+    "is-date-object": "^1.0.5",
+    "is-descriptor": "^1.0.2",
+    "is-extendable": "^0.1.1",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-map": "^2.0.2",
+    "is-negative-zero": "^2.0.2",
+    "is-number": "^3.0.0",
+    "is-number-object": "^1.0.7",
+    "is-obj": "^1.0.1",
+    "is-plain-object": "^2.0.4",
+    "is-regex": "^1.1.4",
+    "is-set": "^2.0.2",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-stream": "^2.0.1",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.9",
+    "is-weakmap": "^2.0.1",
+    "is-weakref": "^1.0.2",
+    "is-weakset": "^2.0.2",
+    "is-windows": "^1.0.2",
+    "isarray": "^1.0.0",
+    "isobject": "^3.0.1",
+    "isstream": "^0.1.2",
+    "kind-of": "^3.2.2",
+    "kuler": "^2.0.0",
+    "lazy": "^1.0.11",
+    "logform": "^2.4.2",
+    "make-dir": "^1.3.0",
+    "map-cache": "^0.2.2",
+    "map-stream": "^0.1.0",
+    "map-visit": "^1.0.0",
+    "micromatch": "^3.1.10",
+    "minimatch": "^3.1.2",
+    "minimist": "^1.2.6",
+    "mixin-deep": "^1.3.2",
+    "mkdirp": "^0.5.6",
+    "ms": "^2.0.0",
+    "mute-stream": "^0.0.8",
+    "nanomatch": "^1.2.13",
+    "nconf": "^0.6.9",
+    "ncp": "^0.4.2",
+    "normalize-path": "^3.0.0",
+    "nssocket": "^0.6.0",
+    "object-assign": "^4.1.1",
+    "object-copy": "^0.1.0",
+    "object-inspect": "^1.12.2",
+    "object-is": "^1.1.5",
+    "object-keys": "^1.1.1",
+    "object-visit": "^1.0.1",
+    "object.assign": "^4.1.2",
+    "object.pick": "^1.3.0",
+    "once": "^1.4.0",
+    "one-time": "^1.0.0",
+    "optimist": "^0.6.0",
+    "pascalcase": "^0.1.1",
+    "path-dirname": "^1.0.2",
+    "path-is-absolute": "^1.0.1",
+    "pause-stream": "^0.0.11",
+    "pify": "^3.0.0",
+    "posix-character-classes": "^0.1.1",
+    "prettyjson": "^1.2.5",
+    "process-nextick-args": "^2.0.1",
+    "prompt": "^0.2.14",
+    "ps-tree": "^1.2.0",
+    "read": "^1.0.7",
+    "readable-stream": "^2.3.7",
+    "readdirp": "^2.2.1",
+    "regex-not": "^1.0.2",
+    "regexp.prototype.flags": "^1.4.3",
+    "remove-trailing-separator": "^1.1.0",
+    "repeat-element": "^1.1.4",
+    "repeat-string": "^1.6.1",
+    "resolve-url": "^0.2.1",
+    "ret": "^0.1.15",
+    "revalidator": "^0.1.8",
+    "rimraf": "^2.7.1",
+    "safe-buffer": "^5.1.2",
+    "safe-regex": "^1.1.0",
+    "safe-stable-stringify": "^2.3.1",
+    "set-value": "^2.0.1",
+    "shush": "^1.0.2",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.7",
+    "simple-swizzle": "^0.2.2",
+    "snapdragon": "^0.8.2",
+    "snapdragon-node": "^2.1.1",
+    "snapdragon-util": "^3.0.1",
+    "source-map": "^0.5.7",
+    "source-map-resolve": "^0.5.3",
+    "source-map-url": "^0.4.1",
+    "split": "^0.3.3",
+    "split-string": "^3.1.0",
+    "stack-trace": "^0.0.10",
+    "static-extend": "^0.1.2",
+    "stream-combiner": "^0.0.4",
+    "string_decoder": "^1.1.1",
+    "string.prototype.trimend": "^1.0.5",
+    "string.prototype.trimstart": "^1.0.5",
+    "strip-json-comments": "^2.0.1",
+    "text-hex": "^1.0.0",
+    "through": "^2.3.8",
+    "to-object-path": "^0.3.0",
+    "to-regex": "^3.0.2",
+    "to-regex-range": "^2.1.1",
+    "triple-beam": "^1.3.0",
+    "unbox-primitive": "^1.0.2",
+    "union-value": "^1.0.1",
+    "unique-string": "^1.0.0",
+    "unset-value": "^1.0.0",
+    "upath": "^1.2.0",
+    "urix": "^0.1.0",
+    "use": "^3.1.1",
+    "util-deprecate": "^1.0.2",
+    "utile": "^0.2.1",
+    "which-boxed-primitive": "^1.0.2",
+    "which-collection": "^1.0.1",
+    "which-typed-array": "^1.1.8",
+    "winston": "^3.8.1",
+    "winston-transport": "^4.5.0",
+    "wordwrap": "^0.0.3",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^2.4.3",
+    "xdg-basedir": "^3.0.0"
+  },
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "type": "module",
-  "license": "ISC",
-  "dependencies": {
-    "forever": "^4.0.3"
-  }
+  "license": "ISC"
 }
