--- a/Clase30/NginxServer/package.json
+++ b/Clase30/NginxServer/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "1",
+  "name": "nginxserver",
   "version": "1.0.0",
   "description": "",
-  "main": "cluster.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -12,7 +12,6 @@
   "type": "module",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "minimist": "^1.2.6"
+    "express": "^4.18.1"
   }
 }
