--- a/Clase 32/Entregable/package.json
+++ b/Clase 32/Entregable/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node benchmark.js",
     "start": "node server.js"
   },
   "keywords": [],
@@ -12,7 +12,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "0x": "^5.4.0",
+    "autocannon": "^7.9.0",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
@@ -23,10 +26,7 @@
     "faker": "^5.5.3",
     "forever": "^4.0.3",
     "knex": "^2.1.0",
-<<<<<<< HEAD
     "log4js": "^6.6.1",
-=======
->>>>>>> 75a020e7c67eb5347a0b1ced3cfa1f280bbb3646
     "minimist": "^1.2.6",
     "mongoose": "^6.4.4",
     "mysql": "^2.18.1",
