--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "~2.29.3",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.8",
     "nodemon": "^2.0.18",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
