--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "got": "^12.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
     "minimist": "^1.2.6",
