--- a/Clase 46/Entregable/api-tfragances/tsconfig.json
+++ b/Clase 46/Entregable/api-tfragances/tsconfig.json
@@ -6,6 +6,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "assets": [
+      "**/*.ejs"
+    ],
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./dist",
