--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "got": "^12.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.1.0",
+    "koa": "^2.13.4",
     "minimist": "^1.2.6",
     "moment": "~2.29.3",
     "multer": "^1.4.4",
