--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "pug": "^3.0.2",
